--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "curso-node-midudev",
   "version": "1.0.0",
-  "description": "Curso Node.js Midudev",
+  "description": "Curso de Node.js de Midudev",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,5 +13,8 @@
     "nodejs"
   ],
   "author": "Guillermo Ruiz Arranz - codesthenos",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "picocolors": "1.0.1"
+  }
 }
