--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "license": "ISC",
   "dependencies": {
     "picocolors": "1.0.1"
+  },
+  "devDependencies": {
+    "standard": "17.1.0"
+  },
+  "eslintConfig": {
+    "extends": "standard"
   }
 }
