Commit 1: Inicio documento 1.http.js en Video--2 y adejo ordenadas las dependencias de dev en el carpeta raiz del git rep y la de picocolors solo en Video--1, Doy por concluido al 100% Video--1 y por comenzado Video--2

--- a/Video--1/package.json
+++ b/Video--1/package.json
@@ -1,26 +1,19 @@
 {
-  "name": "curso-node-midudev",
+  "name": "video--1",
   "version": "1.0.0",
-  "description": "Curso de Node.js de Midudev",
-  "main": "index.js",
+  "description": "video1 curso node ",
+  "main": "1.os-info.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "curso",
-    "node",
-    "Midudev",
-    "nodejs"
+    "video1",
+    "nodejs",
+    "midudev"
   ],
   "author": "Guillermo Ruiz Arranz - codesthenos",
   "license": "ISC",
   "dependencies": {
-    "picocolors": "1.0.1"
-  },
-  "devDependencies": {
-    "standard": "17.1.0"
-  },
-  "eslintConfig": {
-    "extends": "standard"
+    "picocolors": "^1.0.1"
   }
 }
