--- a/Video--2/package.json
+++ b/Video--2/package.json
@@ -4,7 +4,7 @@
   "description": "express",
   "main": "0.1.webTextoCentrado17Lineas.js",
   "scripts": {
-    "dev:1": "node --watch 3.express.js"
+    "dev:1": "node --watch 3.1.expressFinal.js"
   },
   "keywords": [
     "express",
