--- a/Video--4/package.json
+++ b/Video--4/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "API REST node express",
   "main": "app.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +18,7 @@
   "dependencies": {
     "cors": "2.8.5",
     "express": "4.19.2",
+    "mongodb": "6.7.0",
     "zod": "3.23.8"
   }
 }
