--- a/Video--5/package.json
+++ b/Video--5/package.json
@@ -5,7 +5,10 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server-mysql": "node --watch server-mysql.js",
+    "server-mongo": "node --watch server-mongodb.js",
+    "server-local": "node --watch server-localFyleSystem.js"
   },
   "keywords": [
     "API",
