Commit 2: instalo dependencia morgan e incluyo un middleware usando el logger de morgan y ahora al hacer una request me sale un resultado en consola

--- a/Video--6/package.json
+++ b/Video--6/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server/index": "node --watch server/index.js"
   },
   "keywords": [
     "socket.io",
@@ -14,6 +15,7 @@
   "author": "Guillermo Ruiz Arranz - codesthenos",
   "license": "ISC",
   "dependencies": {
-    "express": "4.19.2"
+    "express": "4.19.2",
+    "morgan": "1.10.0"
   }
 }
