--- a/Video--6/package.json
+++ b/Video--6/package.json
@@ -15,6 +15,8 @@
   "author": "Guillermo Ruiz Arranz - codesthenos",
   "license": "ISC",
   "dependencies": {
+    "@libsql/client": "^0.7.0",
+    "dotenv": "^16.4.5",
     "express": "4.19.2",
     "morgan": "1.10.0",
     "socket.io": "4.7.5"
